--- a/project/templates/passwords_list.html
+++ b/project/templates/passwords_list.html
@@ -3,11 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List of PAsswords</title>
+    <title>Liste des mot de passe</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5dc; /* Nude beige background */
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            width: 50%;
+            margin: auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 50px;
+            position: relative;
+        }
+        h2 {
+            text-align: center;
+        }
+        .catchy-text {
+            font-size: 1.2em; /* Larger font size */
+            color: #800000; /* Burgundy color */
+            font-weight: bold; /* Bold text */
+            margin-top: 20px; /* Add some space between title and text */
+        }
+        .word-list {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        .word-list li {
+            margin-bottom: 5px;
+            padding: 8px 12px;
+            background-color: #f8f8f8;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            word-break: break-all;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h2>List of Passwords</h2>
+        <h2>Liste des mot de passe</h2>
+        
+        <p class="catchy-text">C'est le dictionnaire qu'on peut utiliser pour vous pirater!</p>
+        
         <ul class="word-list">
             {% for word in words %}
             <li>{{ word }}</li>
