--- a/project/templates/web-tool.html
+++ b/project/templates/web-tool.html
@@ -46,10 +46,24 @@
             border-radius: 5px;
             cursor: pointer;
             width: 100%;
+            margin-bottom: 10px;
         }
         button:hover {
             background-color: #8b0000; /* Darker shade of burgundy on hover */
         }
+        .calcul-button {
+            padding: 10px;
+            background-color: #000000;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100%;
+        }
+        .calcul-button:hover {
+            background-color: grey; 
+        }
+
     </style>
 </head>
 <body>
@@ -72,9 +86,9 @@
         <label for="PDF_file">PDF file:</label>
         <input type="file" id="PDF_file" name="PDF_file">
 
-        <button type="submit" name="action" value="my-link">Estimations</button> 
-        <!-- Bouton pour rediriger vers "/my-link-bis/" -->
-        <button type="submit" name="action" value="my-link-bis">Passwords</button> 
+        <button type="submit" name="action" value="generator" class="calcul-button">CALCUL</button> 
+        <button type="submit" name="action" value="estimations">Estimations</button> 
+        <button type="submit" name="action" value="entries">Passwords</button> 
       
    </form>
 
