--- a/project/templates/estimation_results.html
+++ b/project/templates/estimation_results.html
@@ -53,7 +53,7 @@
 <body>
     <div class="container">
         <h2>Estimation d'Effort</h2>
-        <p class="catchy-text">C'est le nombre de tentatives qu'il faut à l'attaquant pour deviner votre mot de passe contenant ce mot!</p>
+        <p class="catchy-text">Nombre de tentatives minimales qu'il faut à un attaquant pour deviner votre mot de passe contenant ce mot, selon le format du mot de passe contenant le mot. </p>
 
         <table border="1">
             <tr>
