--- a/project/templates/passwords_list.html
+++ b/project/templates/passwords_list.html
@@ -50,7 +50,7 @@
     <div class="container">
         <h2>Liste des mot de passe</h2>
         
-        <p class="catchy-text">C'est le dictionnaire qu'on peut utiliser pour vous pirater!</p>
+        <p class="catchy-text">Dictionnaire de mots de passes possibles générées avec vos informations. N'utilisez pas un mot de passe se trouvant dans la liste !</p>
         
         <ul class="word-list">
             {% for word in words %}
