--- a/project/templates/estimation_results.html
+++ b/project/templates/estimation_results.html
@@ -1,25 +1,52 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estimation d'Effort</title>
     <style>
+         * {margin:0;
+            padding: 0;
+            box-sizing: border-box;
+         }
         body {
             font-family: Arial, sans-serif;
             background-color: #f5f5dc; /* Nude beige background */
             margin: 0;
             padding: 0;
         }
+        section {
+            position: absolute;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            gap: 1px;
+            flex-wrap: wrap;
+            z-index: 1;
+        }
+        section span{
+            position: relative;
+            display: block;
+            width: calc(3vw - 0px);
+            height: calc(3vw -2px);
+            background: #181818;
+            transition: 1.5s;
+            z-index: 2;
+    }
+        section span:hover{
+            background: #0f0;
+            transition:0s;
+        }
         .container {
             width: 70%;
-            margin: auto;
+            margin: 50px auto 0;
             padding: 20px;
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.8);
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin-top: 50px;
             position: relative;
+            z-index: 3;
         }
         h2 {
             text-align: center;
@@ -43,16 +70,696 @@
         th, td {
             padding: 8px 12px;
             text-align: left;
-            border-bottom: 1px solid #ddd; /* Match the border color of list items in the first style */
+            border-bottom: 1px solid #ddd; 
         }
         th {
-            background-color: #f8f8f8; /* Match the background color of list items in the first style */
+            background-color: #f8f8f8; 
+        }
+        .back-buttons {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            display: block;
+            flex-direction: column;
+            text-align: right;
+        }
+        .back-buttons button {
+          
+            margin-bottom: 10px; 
         }
     </style>
 </head>
 <body>
+    <section>
+
+
+
+
+
+
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+        <span></span> 
+       
+     </section>
     <div class="container">
         <h2>Estimation d'Effort</h2>
+        <form id="estimation_results" action="/estimations" method="POST" enctype="multipart/form-data">
+
+            <button type="submit" name="action" value="back" class="back-button">Revenir</button> 
+            <button type="submit" name="action" value="home" class="back-button">Acceuil</button> 
+         
         <p class="catchy-text">Nombre de tentatives minimales qu'il faut à un attaquant pour deviner votre mot de passe contenant ce mot, selon le format du mot de passe contenant le mot. </p>
 
         <table border="1">
