--- a/project/templates/passwords_list.html
+++ b/project/templates/passwords_list.html
@@ -51,6 +51,7 @@
         }
         h2 {
             text-align: center;
+            margin-bottom: 30px;
         }
         .catchy-text {
             font-size: 1.2em; /* Larger font size */
